--- a/www/index.html
+++ b/www/index.html
@@ -24,9 +24,9 @@
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
-    <!-- Firebase -->
-    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+    <!-- sails -->
+    <script src="lib/sails.io.js/dist/sails.io.js"></script>
+    <script src="lib/angular-sails/dist/angular-sails.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
