--- a/www/index.html
+++ b/www/index.html
@@ -7,13 +7,16 @@
 
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">    
+    <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
     <script src="lib/ionic-rating/ionic-rating.min.js"></script>
+
+    <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
 
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyAFGklntWkzGAZn76NWBHO1LeRXoiLBEaE&sensor=true"></script>
 
